src/ast/snapshots/tests__type_fun_decl_invalid_return.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        ExpectedFoundAt(
            Int,
            Str,
            NodeId(
                12,
            ),
        ),
    ],
)
