src/ast/snapshots/tests__type_fun_decl_void_invalid_return.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        VoidFunctionWithReturn(
            NodeId(
                13,
            ),
        ),
    ],
)
