src/ast/snapshots/tests__type_fun_decl_void_return.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    1,
                ),
                Str,
            ),
            (
                IdentId(
                    2,
                ),
                Str,
            ),
        ],
        [
            (
                IdentId(
                    0,
                ),
                FuncType {
                    args: [
                        Str,
                    ],
                    out: None,
                },
            ),
        ],
    ),
)
