src/ast/snapshots/tests__type_get_var.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Str,
            ),
        ],
        [],
    ),
)
