src/ast/snapshots/tests__type_if_cond_invalid.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        ExpectedFoundAt(
            Bool,
            Int,
            NodeId(
                14,
            ),
        ),
    ],
)
