src/ast/snapshots/tests__type_invalid_assign.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        ExpectedFoundAt(
            Int,
            Str,
            NodeId(
                25,
            ),
        ),
    ],
)
