src/ast/snapshots/tests__type_invalid_operation_with_steps.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        ExpectedFoundAt(
            Int,
            Str,
            NodeId(
                16,
            ),
        ),
    ],
)
