src/ast/snapshots/tests__type_recursive.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [],
        [
            (
                IdentId(
                    0,
                ),
                FuncType {
                    args: [],
                    out: Some(
                        Int,
                    ),
                },
            ),
        ],
    ),
)
