src/ast/snapshots/tests__type_valid_simple_int.snap
---
source: src/ast/types.rs
expression: types.map(determinize)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Int,
            ),
        ],
        [],
    ),
)
