src/ast/snapshots/tests__type_valid_simple_str.snap
---
source: src/ast/types.rs
expression: types.map(determinize)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Str,
            ),
        ],
        [],
    ),
)
